[tool.poetry]
name = "sns-sqs-fanout-approach"
version = "0.1.0"
description = ""
authors = ["John Larkin <john.larkin@mojo.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
boto3 = "^1.36.19"
localstack = "^4.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
